# BitShares

./: .gitignore  CMakeLists.txt  DESIGN.md  LICENSE.md  README.md  TODO.md  bitshared.cpp  coding_standards.md  config.json  tasks.md
bitchat/: CMakeLists.txt  main.cpp
bitsharesgui/: bitshares.qrc  bitsharesgui.pro  bitsharesguiprecomp.h  bitsharesmainwindow.cpp  bitsharesmainwindow.h  bitsharesmainwindow.ui  bitsharestreemodel.cpp  bitsharestreemodel.h  bshare_gui.cpp  bshare_gui.h  bshare_gui.ui  bshare_viewport.cpp  bshare_viewport.hpp  chatwidget.cpp  chatwidget.h  chatwidget.ui  main.cpp  profileeditor.cpp  profileeditor.h  profileeditor.ui  selfsizingmainwindow.cpp  selfsizingmainwindow.h  ui_bitsharesmainwindow.h  ui_profileeditor.h
bitsharesgui/bshare_viewports/: bshare_viewport_mail.cpp  bshare_viewport_mail.hpp
cli_client/: CMakeLists.txt  main.cpp
configs/: a.json  b.json  c.json
doc/: bitname.dox  dds.dox  doxygen.cfg  mainpage.dox
include/bts/: address.hpp  application.hpp  bitchat_message.hpp  bitmessage.hpp  config.hpp  difficulty.hpp  extended_address.hpp  hd_wallet.hpp  inventory.hpp  keychain.hpp  merkle_tree.hpp  mini_pow.hpp  profile.hpp  proof_of_work.hpp  small_hash.hpp  units.hpp  wallet.hpp  wallet_cache.hpp
include/bts/addressbook/: addressbook.hpp  contact.hpp
include/bts/bitchat/: bitchat_channel.hpp  bitchat_client.hpp  bitchat_message_cache.hpp  bitchat_message_db.hpp  bitchat_messages.hpp  bitchat_private_message.hpp
include/bts/bitname/: bitname_block.hpp  bitname_channel.hpp  bitname_client.hpp  bitname_db.hpp  bitname_fork_db.hpp  bitname_hash.hpp  bitname_messages.hpp  bitname_miner.hpp  bitname_record.hpp  name_block.hpp  name_channel.hpp  name_client.hpp  name_db.hpp  name_messages.hpp  name_miner.hpp
include/bts/blockchain/: asset.hpp  block.hpp  blockchain_channel.hpp  blockchain_client.hpp  blockchain_db.hpp  blockchain_market_db.hpp  blockchain_messages.hpp  blockchain_printer.hpp  blockchain_time_keeper.hpp  fork_tree.hpp  outputs.hpp  proof.hpp  transaction.hpp  trx_validation_state.hpp
include/bts/db/: level_map.hpp  level_pod_map.hpp  peer.hpp  peer_ram.hpp
include/bts/dds/: dividend_cache.hpp  mmap_array.hpp  name_table.hpp  table_header.hpp  transfer_output_cache.hpp
include/bts/network/: broadcast_manager.hpp  channel.hpp  channel_id.hpp  channel_pow_stats.hpp  connection.hpp  feature_id.hpp  get_public_ip.hpp  message.hpp  server.hpp  stcp_socket.hpp  upnp.hpp
include/bts/peer/: peer_channel.hpp  peer_db.hpp  peer_host.hpp  peer_messages.hpp
include/bts/rpc/: rpc_server.hpp
keyhotee/profile_wizard/: ProfileWizard.cpp
src/: account.cpp  account.hpp  address.cpp  api.hpp  application.cpp  bitchat_message.cpp  bitmessage.cpp  block_chain.cpp  blockchain.hpp  chain_state.cpp  chain_state.hpp  database.cpp  database.hpp  db.cpp  db.hpp  difficulty.cpp  dividend_cache.cpp  extended_address.cpp  hd_wallet.cpp  keychain.cpp  main.cpp  merkle_tree.cpp  meta.hpp  miner.cpp  miner.hpp  mini_pow.cpp  mtree.hpp  profile.cpp  proof_chain.hpp  proof_of_work.cpp  small_hash.cpp  test.cpp  wallet.cpp  wallet_cache.cpp
src/addressbook/: addressbook.cpp
src/bitchat/: bitchat_channel.cpp  bitchat_client.cpp  bitchat_message_cache.cpp  bitchat_message_db.cpp  bitchat_messages.cpp  bitchat_private_message.cpp
src/bitname/: bitname_block.cpp  bitname_channel.cpp  bitname_client.cpp  bitname_db.cpp  bitname_fork_db.cpp  bitname_hash.cpp  bitname_messages.cpp  bitname_miner.cpp  bitname_record.cpp  name_block.cpp  name_channel.cpp  name_client.cpp  name_db.cpp  name_hash.cpp  name_miner.cpp
src/blockchain/: asset.cpp  block.cpp  blockchain_channel.cpp  blockchain_client.cpp  blockchain_db.cpp  blockchain_market_db.cpp  blockchain_messages.cpp  blockchain_outputs.cpp  blockchain_printer.cpp  blockchain_time_keeper.cpp  transaction.cpp  trx_validation_state.cpp
src/db/: peer_ram.cpp
src/dds/: dds.cpp  output_by_address_table.cpp
src/gui/: CMakeLists.txt  gui_main.cpp
src/network/: channel_pow_stats.cpp  connection.cpp  get_public_ip.cpp  server.cpp  stcp_socket.cpp  upnp.cpp
src/peer/: peer_channel.cpp  peer_db.cpp  peer_messages.cpp
src/rpc/: rpc_server.cpp
tests/: CMakeLists.txt  blockchain_tests.cpp  chain.html  dds_tests.cpp  pow_test.cpp  timekeeper.cpp  unit_tests.cpp  wallet_test.cpp
